# Burapay

./: .gitignore  .replit  Dockerfile  RAILWAY_DEPLOY.md  backend_test.py  design_guidelines.json  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.toml  railway_start.sh  run.sh  start.sh  wallet_sync_test.py
.emergent/: summary.txt
attached_assets/: Pasted--Critical-Issue-Casino-Game-Flow-Cashout-Transaction-Bu_1782807313857.txt  Pasted--Project-Context-Tech-Stack-Frontend-React-js-Tailwind-_1782806156890.txt  Pasted--Strict-Requirement-Two-Step-Casino-Transaction-Flow-Be_1782807386569.txt  Pasted-Biz-Burapay-loyihasining-Kazino-bo-limi-ichiga-birinchi_1782554981801.txt  Pasted-I-have-a-FastAPI-backend-production-project-MR-PAY-that_1782725549097.txt  Pasted-Loyiha-tarkibiga-yangi-funksional-Foydalanuvchilararo-i_1782769634130.txt  Pasted-Siz-React-Frontend-FastAPI-Backend-PostgreSQL-Ma-lumotl_1782759345548.txt  Pasted-Siz-React-Frontend-FastAPI-Backend-PostgreSQL-va-Tailwi_1782759379510.txt  Pasted-Siz-Telegram-Mini-App-BuraPay-loyihasini-rivojlantirish_1782760265119.txt  Pasted-Siz-Telegram-Mini-App-BuraPay-loyihasini-rivojlantirish_1782802826837.txt  Pasted-Siz-Telegram-Mini-App-BuraPay-loyihasini-rivojlantirish_1782802937866.txt  Pasted-Siz-Telegram-Mini-App-BuraPay-loyihasini-rivojlantirish_1782803100501.txt  Pasted-Siz-Telegram-Mini-App-BuraPay-loyihasini-rivojlantirish_1782804065576.txt  Pasted-Siz-Telegram-Mini-App-Frontend-React-Craco-Backend-Node_1782542797596.txt  (+1 more)
backend/: .env  database.py  requirements.txt  server.py
(+26 files in other folders)
