[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "aiogram==3.4.1",
    "aiohttp==3.9.5",
    "bcrypt==4.1.3",
    "cryptography==46.0.4",
    "email-validator==2.3.0",
    "fastapi==0.110.1",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "magic-filter==1.0.12",
    "motor==3.3.1",
    "passlib==1.7.4",
    "pillow==12.1.0",
    "pydantic==2.5.3",
    "pyjwt==2.11.0",
    "pymongo==4.5.0",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "requests==2.32.5",
    "starlette==0.37.2",
    "stripe==14.3.0",
    "tenacity==9.1.2",
    "uvicorn==0.25.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
]
